syntax="proto3";

package notification_service;
option go_package="genproto/notification_service";

import "google/protobuf/empty.proto";

service EmailTmpService {
  rpc CreateEmailTmp(CreateEmailTmpReq) returns (CreateEmailTmpRes) {}
  rpc GetEmailTmp(GetEmailTmpReq) returns (GetEmailTmpRes) {}
  rpc GetEmailTmpList(GetEmailTmpListReq) returns (GetEmailTmpListRes) {}
  rpc UpdateEmailTmp(UpdateEmailTmpReq) returns (UpdateEmailTmpRes) {}
  rpc DeleteEmailTmp(DeleteEmailTmpReq) returns (google.protobuf.Empty) {}
}

message EmailTmp {
  string id = 1;
  string title = 2;
  string description = 3;
  string type = 4;
  string text = 5;
  string created_at = 6;
}

message CreateEmailTmpReq {
  string title = 1;
  string description = 2;
  string type = 3;
  string text = 4;
  string created_at = 5;
}

message CreateEmailTmpRes {
  string id = 1;
  string title = 2;
  string description = 3;
  string type = 4;
  string text = 5;
  string created_at = 6;
}

message GetEmailTmpReq {
  string id = 1;
}

message GetEmailTmpRes {
  string id = 1;
  string title = 2;
  string description = 3;
  string type = 4;
  string text = 5;
  string created_at = 6;
}

message GetEmailTmpListReq {
  int32 limit = 1;
  int32 offset = 2;
  string search = 3;
  string type = 4;
}

message GetEmailTmpListRes {
  repeated EmailTmp email_tmps = 1;
  int32 count = 2;
}

message UpdateEmailTmpReq {
  string id = 1;
  string title = 2;
  string description = 3;
  string type = 4;
  string text = 5;
  string created_at = 6;
}

message UpdateEmailTmpRes {
  string id = 1;
  string title = 2;
  string description = 3;
  string type = 4;
  string text = 5;
  string created_at = 6;
}

message DeleteEmailTmpReq {
  string id = 1;
}